--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+/* Styling for movie list */
+.Movie_poster {
+  object-fit: cover;
+  height: 500px;
+  width: 340px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Movie_specs {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
+.Movie_container {
+  width: 340px;
+}
+body {
+  margin: 24px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 15x;
+  background-color: rgb(147, 147, 194);
+}
+
+.Movie_Summary {
+  color: #222222;
+}
+.Rating {
+  font-size: 18px;
+  font-weight: 400;
+}
+.Movie_name {
+  margin: 8px 0px;
+}
+.Movie-list {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: flex-end;
+}
+/* 
+Styling for movie list ends herer */
+/* 
+Styling for like and dislike */
+
+.container {
+  display: flex;
+  gap: 10px;
+}
+.likes-dislikes {
+  font-size: 20px;
+}
+.Addmoviecontainer {
+  display: flex;
+  border: 5px solid black;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
+.Addbutton {
+  display: flex;
 
-.App-link {
-  color: #61dafb;
+  padding-bottom: 20px;
+  justify-content: flex-end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button {
+  background-color: greenyellow;
+  border-radius: 20px;
+  float: right;
+}
+.dataform {
+  padding-left: 700px;
+  border: 2px solid black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: auto;
+}
+.Summary {
+  padding-right: 35px;
+}
+.Rating {
+  padding-right: 47px;
+}
+.Movie_name {
+  padding-right: 10px;
+}
+.poster {
+  padding-right: 50px;
+}
+.submit {
+  padding-left: 130px;
 }
