--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Styling for movie list */
 .Movie_poster {
   object-fit: cover;
   height: 500px;
@@ -16,11 +15,20 @@ body {
   margin: 24px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 15x;
-  background-color: rgb(147, 147, 194);
+  background-color: #1ac1eb;
+  /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy5h6Q1OHLvsr4CAfNExFpUis6DXjSzAV52A&usqp=CAU);
+  /* Full height */
+  /* height: 100%; */
+
+  /* Center and scale the image nicely */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
 }
 
 .Movie_Summary {
-  color: #222222;
+  color: rgb(2, 1, 2);
+  /* background-color: aliceblue; */
 }
 .Rating {
   font-size: 18px;
@@ -46,6 +54,7 @@ Styling for like and dislike */
 }
 .likes-dislikes {
   font-size: 20px;
+  border-radius: 10px;
 }
 .Addmoviecontainer {
   display: flex;
